--- a/index.html
+++ b/index.html
@@ -28,22 +28,21 @@
     <meta name="url" content="https://bdaycard.web.app">
 
     <!-- <meta property="og:title" content="Happy Birthday to You"> -->
+    <!-- <meta property="og:image" content="https://bdaycard--first-beta-release-jbewlb74.web.app/assets/images/og-image.jpg"> -->
     <meta property="og:type" content="website">
 		<meta property="og:url" content="https://bdaycard.web.app">
     <meta property="og:description" content="🎊 Many many happy returns of the day.✨">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
-    <meta property="og:image" content="https://bdaycard--first-beta-release-jbewlb74.web.app/assets/images/og-image.jpg">
 
     <!-- <meta property="twitter:title" content="Happy Birthday to You"> -->
+		<!-- <meta property="twitter:image" content="https://bdaycard--first-beta-release-jbewlb74.web.app/assets/images/og-image.jpg"> -->
     <meta property="twitter:card" content="summary">
 		<meta property="twitter:creator" content="@_formula21">
 		<meta property="twitter:url" content="https://bdaycard.web.app">
 		<meta property="twitter:description" content="🎊 Many many happy returns of the day.✨">
-		<meta property="twitter:image" content="https://bdaycard--first-beta-release-jbewlb74.web.app/assets/images/og-image.jpg">
 		<meta property="twitter:domain" content="bdaycard.web.app">
     
-
     <title>Happy Birthday to You</title>
   </head>
   <body>
@@ -75,9 +74,27 @@
               window.dispatchEvent(new Event("onCaptchaLoadedEvent"));
           }, () => {
               window.captchaLoaded = false;
-              window.dispatchEvent(new Event("onCaptchaFailedEvent"))
+              // window.dispatchEvent(new Event("onCaptchaFailedEvent"))
           });
-      })
+      });
+
+      const captchaHandler = ( prompt = '🥳') => {
+        console.group("Captcha Group");
+        console.log("👇🏻 We have some captcha information.");
+        console.log("For privacy policy please check: https://policies.google.com/privacy");
+        if(prompt === '🥳') {
+          console.info("> 🥳 Hurray, we have a ReCaptcha Badge ")
+        }else if( prompt === '😭') {
+          console.warn("> 😭 Something went wrong. Now we do not have ReCaptcha Badge");
+        }else {
+          console.log("> 🤔 We do not have any info!");
+        }
+        console.groupEnd("Captcha Group")
+      } 
+
+      window.addEventListener("onCaptchaLoadedEvent", captchaHandler('🥳'));
+      // window.addEventListener("onCaptchaFailedEvent", captchaHandler('😭'));
+
       </script>
       <script type="module" src="/src/main.tsx"></script>
     </body>
