:home: Changed homepage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="url" content="https://bdaycard.web.app">
 
     <!-- <meta property="og:title" content="Happy Birthday to You"> -->
-    <!-- <meta property="og:image" content="https://bdaycard--first-beta-release-jbewlb74.web.app/assets/images/og-image.jpg"> -->
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/fire-apps-7827c.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=300c5c7b-b405-4a84-9285-65e3ceaa8ae1">
     <meta property="og:type" content="website">
 		<meta property="og:url" content="https://bdaycard.web.app">
     <meta property="og:description" content="🎊 Many many happy returns of the day.✨">
@@ -36,18 +36,20 @@
     <meta property="og:image:height" content="512">
 
     <!-- <meta property="twitter:title" content="Happy Birthday to You"> -->
-		<!-- <meta property="twitter:image" content="https://bdaycard--first-beta-release-jbewlb74.web.app/assets/images/og-image.jpg"> -->
+		<meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/fire-apps-7827c.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=300c5c7b-b405-4a84-9285-65e3ceaa8ae1">
     <meta property="twitter:card" content="summary">
 		<meta property="twitter:creator" content="@_formula21">
 		<meta property="twitter:url" content="https://bdaycard.web.app">
 		<meta property="twitter:description" content="🎊 Many many happy returns of the day.✨">
 		<meta property="twitter:domain" content="bdaycard.web.app">
+
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+		<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     
     <title>Happy Birthday to You</title>
   </head>
   <body>
     <div id="root"></div>
-
     <script type="application/javascript">
       window.captchaLoaded = false;
       const loadScript = (src, callback = null, fallback = null, defer = true, async =  true) => {
