--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
     <meta name="title" content="Happy Birthday to You">
 		<meta name="author" content="Anweshan Roy Chowdhury">
 		<meta name="description" content="Many many happy returns of the day ✨.">
-    <meta name="domain" content="birthday-card.web.app">
-    <meta name="url" content="https://birthday-card.web.app">
+    <meta name="domain" content="hdb-card.web.app">
+    <meta name="url" content="https://hbd-card.web.app">
 
     <meta property="og:title" content="Happy Birthday to You">
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/fire-apps-7827c.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=300c5c7b-b405-4a84-9285-65e3ceaa8ae1">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/anrcry.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=eba4d84a-1ccd-46d1-9a44-91b3066b77da">
     <meta property="og:type" content="website">
-		<meta property="og:url" content="https://birthday-card.web.app">
+		<meta property="og:url" content="https://hbd-card.web.app">
     <meta property="og:description" content="Many many happy returns of the day ✨.">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
 
     <meta property="twitter:title" content="Happy Birthday to You">
-		<meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/fire-apps-7827c.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=300c5c7b-b405-4a84-9285-65e3ceaa8ae1">
+		<meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/anrcry.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=eba4d84a-1ccd-46d1-9a44-91b3066b77da">
     <meta property="twitter:card" content="summary">
-		<meta property="twitter:creator" content="@_formula21">
-		<meta property="twitter:url" content="https://birthday-card.web.app">
+		<meta property="twitter:creator" content="@cybrix">
+		<meta property="twitter:url" content="https://hbd-card.web.app">
 		<meta property="twitter:description" content="Many many happy returns of the day ✨.">
-		<meta property="twitter:domain" content="birthday-card.web.app">
+		<meta property="twitter:domain" content="hdb-card.web.app">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
