Changed the media token & the storage config url of a meta tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="url" content="https://birthday.cybrix.in">
 
     <meta property="og:title" content="Happy Birthday to You">
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/anrcry.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=eba4d84a-1ccd-46d1-9a44-91b3066b77da">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/cybrixin.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=9d6c1351-c869-4705-9651-68d742efcc28">
     <meta property="og:type" content="website">
 		<meta property="og:url" content="https://birthday.cybrix.in">
     <meta property="og:description" content="Many many happy returns of the day ✨.">
@@ -36,7 +36,7 @@
     <meta property="og:image:height" content="512">
 
     <meta property="twitter:title" content="Happy Birthday to You">
-		<meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/anrcry.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=eba4d84a-1ccd-46d1-9a44-91b3066b77da">
+		<meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/cybrixin.appspot.com/o/birthday%2Fimages%2Fog-image.jpg?alt=media&token=9d6c1351-c869-4705-9651-68d742efcc28">
     <meta property="twitter:card" content="summary">
 		<meta property="twitter:creator" content="@cybrix">
 		<meta property="twitter:url" content="https://birthday.cybrix.in">
