--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
 		<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     
-    <title>Happy Birthday to you</title>
+    <title>Happy Birthday Srinanda</title>
   </head>
   <body>
     <div id="root"></div>
