--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<meta property="twitter:creator" content="@cybrix">
 		<meta property="twitter:url" content="https://bday.cybrix.in">
 		<meta property="twitter:description" content="Many many happy returns of the day ✨.">
-		<meta property="twitter:domain" codaybirthday.cybrix.in">
+		<meta property="twitter:domain" content="bday.cybrix.in">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
